--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
-<button id = "test">Hello</button>
+<html>
+  <head>
+    <title>Damon</title>
+  </head>
+    <button id = "test">Hello</button>
+    <p>
+      This is a web page  
+    </p>
+  </body>
+</html>
 
